Bug 1528818 - Fix Ion loading bigint from arguments object r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D20339